fix(TableHeaderLabel): Fixed empty header alignment
Added vertical align bottom to the TableHeaderLabel to prevent spacing issues when no header is present

--- a/packages/axiom-components/src/Table/Table.css
+++ b/packages/axiom-components/src/Table/Table.css
@@ -119,6 +119,7 @@
   color: var(--color-theme-text--subtle);
   font-weight: var(--font-weight-bold);
   white-space: nowrap;
+  vertical-align: bottom;
   transition: color var(--transition-time-base) var(--transition-function);
 }
 
